manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pp-example
  labels:
    name: ingress-pp-example
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    argocd.argoproj.io/sync-wave: "3"
spec:
  ingressClassName: nginx
  rules:
  - host: next-demo.precopratico.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pp-example-service
            port: 
              number: 3000
  tls:
  - hosts:
    - "next-demo.precopratico.com.br"
    secretName: pp-example-ssl
